# advent-of-code

./: .gitignore  README.md
2018/day_01/: 1201_2.py
2018/day_02/: 1202_1.py
2018/day_03/: 1203_1.py
2018/day_04/: 1204_1_1.py  1204_1_all_sleep  1204_1_out  1204_guard_list  1204_input_20.txt  log_guard
2018/day_05/: polymers_reacted
2019/day-05/: Makefile  README.rst  param_mode.py  pyproject.toml
2019/day-05/day_05/: main.py
2019/day-05/tests/: test_day_05.py
2019/day-05/tests/data/: day_02_input_part2
2019/day_01/: day_1_p2.py
2019/day_02/: .input.txt.swo  day_02_p1.py  day_02_p1.py.old  day_02_p2.py  mapping.py
2019/day_03/: day_03_p1.py
2019/day_04/: day_04_p1.py
2019/day_05/: test_map.py
aoc2015/: Makefile  pyproject.toml
aoc2015/aoc2015/: cartesian_plane.py  common.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  light_plane.py
aoc2015/input/: day_02_ex_01  day_05_1vader  day_05_1vader_missing  day_05_first_10  day_05_incorrect
aoc2015/tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_light_plane.py
aoc2018/day_01/: 1201_1.py  freq.py
aoc2018/day_02/: 1202_2.py
aoc2018/day_03/: 1203_input_1.txt
aoc2018/day_04/: 1204_1.py  log_ordered
aoc2018/day_05/: polymer.py  polymer_1.py  test.py  test_output
aoc2019/: Makefile  pyproject.toml
aoc2019/aoc2019/: common.py  day_01.py  day_01_p1.py  day_02.py  day_03.py  day_04.py  day_04_p2.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  intcode.py  param_mode.py  point.py  position.py
aoc2019/input/: day_02
aoc2019/tests/: test_aoc2019.py  test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_intcode.py
aoc2020/: day_04_ex_1  math_example  pyproject.toml
aoc2020/aoc2020/: common.py  day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  scaffold.py
aoc2020/input/: day_02  day_04_ex_8  day_06  day_07  day_07_ex_3  day_08
aoc2020/tests/: test_aoc2020.py
aoc2021/: pyproject.toml
aoc2021/aoc2021/: common.py  coordinates.py  day_01.py  day_02.py  day_03.py  day_04.py  submarine.py
aoc2023/: pyproject.toml
aoc2023/aoc2023/: day_01.py
aoc2023/tests/: test_aoc2023.py
common/: pyproject.toml
common/pip-wheel-metadata/common-0.1.0.dist-info/: METADATA
