[tool.poetry]
name = "aoc2015"
version = "0.1.0"
description = ""
authors = ["Steven Powell <princeodd@gmail.com>"]

[tool.poetry.scripts]
d1p1 = "aoc2015.day_01:part1"
d1p2 = "aoc2015.day_01:part2"
d2p1 = "aoc2015.day_02:part1"
d2p2 = "aoc2015.day_02:part2"
d3p1 = "aoc2015.day_03:part1"
d3p2 = "aoc2015.day_03:part2"
d4p1 = "aoc2015.day_04:part1"
d4p2 = "aoc2015.day_04:part2"
d5p1 = "aoc2015.day_05:part1"
d5p2 = "aoc2015.day_05:part2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
pytest = "^7.1.2"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
