[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = ""
authors = ["Steven Powell <princeodd@gmail.com>"]

[tool.poetry.scripts]
d5p1 = "aoc2019.day_05:part1"
d5p2 = "aoc2019.day_05:part2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
