[tool.poetry]
name = "aoc2019"
version = "0.1.0"
description = ""
authors = ["Steven Powell <princeodd@gmail.com>"]

[tool.poetry.scripts]
d1p1 = "aoc2019.day_01:part1"
d1p2 = "aoc2019.day_01:part2"
d2p1 = "aoc2019.day_02:part1"
d3p1 = "aoc2019.day_03:part1"
d3p2 = "aoc2019.day_03:part2"
d4p2 = "aoc2019.day_04:part2"
d5p1 = "aoc2019.day_05:part1"
d5p2 = "aoc2019.day_05:part2"
d6p1 = "aoc2019.day_06:part1"
d6p2 = "aoc2019.day_06:part2"
d7p1 = "aoc2019.day_07:part1"
d7p2 = "aoc2019.day_07:part2"
d8p1 = "aoc2019.day_08:part1"
d8p2 = "aoc2019.day_08:part2"
d9p1 = "aoc2019.day_09:part1"
d9p2 = "aoc2019.day_09:part2"
d10p1 = "aoc2019.day_10:part1"
d10p2 = "aoc2019.day_10:part2"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
