[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Steven Powell <princeodd@gmail.com>"]

[tool.poetry.scripts]
d1p1 = "aoc2020.day_01:part1"
d1p1bf = "aoc2020.day_01:part1_brute_force"
d1p2 = "aoc2020.day_01:part2"
d1p2bf = "aoc2020.day_01:part2_brute_force"
d2p1 = "aoc2020.day_02:part1"
d2p2 = "aoc2020.day_02:part2"
d3p1 = "aoc2020.day_03:part1"
d3p2 = "aoc2020.day_03:part2"

[tool.poetry.dependencies]
python = "^3.8"
common = {path = "../common"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
